basic login complete + init oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+#adicione suas credencias google!
+#spring.security.oauth2.client.registration.google.client-secret= (adicione aqui)
+#spring.security.oauth2.client.registration.google.client-id= (adicione aqui)
+
