--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 #adicione suas credencias google!
-#spring.security.oauth2.client.registration.google.client-secret= (adicione aqui)
-#spring.security.oauth2.client.registration.google.client-id= (adicione aqui)
+#spring.security.oauth2.client.registration.google.client-secret=
+#spring.security.oauth2.client.registration.google.client-id=
 
