--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 #adicione suas credencias google!
-#spring.security.oauth2.client.registration.google.client-secret=
-#spring.security.oauth2.client.registration.google.client-id=
-
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
